@@ -12,7 +12,7 @@ MPTinR provides a user-friendly way for the analysis of multinomial processing t
 \tabular{ll}{
 Package: \tab MPTinR\cr
 Type: \tab Package\cr
-Version: \tab 0.8.8\cr
+Version: \tab 0.8.9\cr
 Date: \tab 2012-04-14\cr
 License: \tab GPL (>= 2)\cr
 LazyLoad: \tab yes\cr
